# QLog

./: .clang-format  .gitignore  BUILD_FIX_SUMMARY.md  CMakeLists.txt  DIRECTORY_STRUCTURE.md  FILES_CHECKLIST.md  INITIALIZATION_SUMMARY.txt  M0_COMPLETION_SUMMARY.md  M0_IMPLEMENTATION_GUIDE.md  M3_LOG_BUFFER_CORRECTIONS_AND_ALIGNMENT.md  M3_LOG_BUFFER_IMPLEMENTATION_GUIDE.md  M3_MISSING_IMPLEMENTATIONS_AND_TESTS.md  M4_HASH.md  README.md  STATE.md  test_debug.cpp  test_output.txt
benchmark/: CMakeLists.txt
benchmark/cpp/: bench_bqlog_compare.cpp  bench_false_sharing.cpp  bench_stress.cpp
claude/: CLAUDE.md  M12_BENCHMARK_RESULTS.md  M2_BQLOG_ALIGNMENT_TABLE.md  M2_MPSC_ALIGNED_IMPLEMENTATION.md  M6_APPENDER_BASE.md  M6_APPENDER_CONSOLE.md  M6_APPENDER_FILE_BASE.md  M6_APPENDER_FILE_BINARY.md  M6_APPENDER_FILE_COMPRESSED.md  M6_APPENDER_FILE_RAW.md  M6_APPENDER_FILE_TEXT.md  README_INITIAL_SETUP.md  RULES.md  STATE.md  learn_promte.txt  plan.md
demo/: CMakeLists.txt  basic_example.cpp
scripts/: build.sh  format_code.sh  run_sanitizers.sh  test.sh
src/: CMakeLists.txt
src/qlog/appender/: appender_base.cpp  appender_base.h  appender_console.cpp  appender_console.h  appender_file_base.cpp  appender_file_base.h  appender_file_binary.cpp  appender_file_binary.h  appender_file_compressed.cpp  appender_file_compressed.h  appender_file_raw.cpp  appender_file_raw.h  appender_file_text.cpp  appender_file_text.h
src/qlog/buffer/: log_buffer.cpp  log_buffer.h  log_buffer_defs.h  mpsc_ring_buffer.cpp  mpsc_ring_buffer.h  spsc_ring_buffer.cpp  spsc_ring_buffer.h
src/qlog/layout/: layout.cpp  layout.h  utf_utils.h
src/qlog/primitives/: aligned_alloc.cpp  aligned_alloc.h  atomic.h  condition_variable.cpp  condition_variable.h  cpu_relax.h  platform_thread.cpp  platform_thread.h  spin_lock.h  spin_lock_rw.h  util.h
src/qlog/serialization/: entry_format.cpp  entry_format.h  format_hash.cpp  format_hash.h  log_filter.cpp  log_filter.h  serializer.cpp  serializer.h
src/qlog/worker/: log_worker.cpp  log_worker.h
test/: CMakeLists.txt
test/bench/: bench_false_sharing.cpp
test/cpp/: test_aligned_alloc.cpp  test_atomic.cpp  test_condition_variable.cpp  test_entry_format.cpp  test_format_hash.cpp  test_layout.cpp  test_log_buffer.cpp  test_log_filter.cpp  test_log_manager.cpp  test_log_worker.cpp  test_mpsc_ring_buffer.cpp  test_platform_thread.cpp  test_serializer.cpp  test_spin_lock.cpp  test_spin_lock_rw.cpp  test_spsc_ring_buffer.cpp
