# QLog Benchmark CMakeLists.txt

# 基准测试目标（暂时为空，等待实现）
# add_executable(qlog_bench
#     cpp/bench_spin_lock.cpp
#     cpp/bench_siso_ring_buffer.cpp
# )
#
# target_link_libraries(qlog_bench PRIVATE qlog benchmark benchmark_main)

message(STATUS "QLog: Benchmark configuration ready (benchmarks to be added in M1+)")
